# Oracle_Netsuite

./: .gitignore  Dockerfile  Notes.md  README.md  pyproject.toml
nsi_secret_vault/: app.py
nsi_secret_vault/models/: secrets.py
nsi_secret_vault/services/: gpg_generator.py  pass_generator.py  secret_store.py  ssh_generator.py
tests/: conftest.py  test_endpoints.py
tests/services/: test_ssh_generator.py
