[tool.poetry]
name = "nsi-secret-vault"
version = "0.1.0"
description = ""
authors = ["CloudOps SDDC Could Infrastructure <nsgbu_sddc-usability_ww_grp@oracle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
coverage = "^7.6.10"
pyfakefs = "^5.7.4"
pytest-asyncio = "^0.25.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
